# RustWorld

./: Cargo.toml
resources/data/: spritesheet.json
shaders/: shader.frag  shader.vert
src/: block_config.rs  camera.rs  chunk.rs  core.rs  creation.rs  cube.rs  game.rs  game_specs.rs  game_window.rs  lib.rs  main.rs  renderer.rs  rendering.rs  shader.rs  texture.rs  world.rs
src/core/: camera.rs  game.rs  game_window.rs  lib.rs
src/creation/: chunk.rs  cube.rs  noise.rs  world.rs
src/rendering/: mesh.rs  renderer.rs
