[package]
name = "RustWorld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.26"
gl = "0.14.0"
image = "0.19.0"
cgmath = "0.18.0"
serde_json = "1.0.107"
serde = { version = "1.0.189", features = ["derive"] }
noise = "0.8.2"
rand = "0.7.3"